grammar/MerLangParser.py
# Generated from MerLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MerLangParser ( Parser ):

    grammarFileName = "MerLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'('", "')'", "'{'", "'}'", 
                     "'?'", "':'", "'['", "']'", "'.'", "'length'", "','", 
                     "'push'", "'pop'", "'concat'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'int'", "'string'", "'boolean'", "'True'", 
                     "'False'", "'function'", "'return'", "'while'", "'for'", 
                     "'var'", "'const'", "'let'", "'if'", "'else'", "'<'", 
                     "'<='", "'>'", "'>='", "'=='", "'!='", "'print'", "'scan'", 
                     "'break'", "'+'", "'-'", "'*'", "'/'", "'++'", "'--'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BOOLEAN_ASSIGNMENT", "INT_ASSIGNMENT", 
                      "STRING_ASSIGNMENT", "INT", "STRING", "BOOLEAN", "TRUE", 
                      "FALSE", "FUNCTION", "RETURN", "WHILE", "FOR", "VAR", 
                      "CONST", "LET", "IF", "ELSE", "LT", "LTE", "GT", "GTE", 
                      "EQ", "NEQ", "PRINT", "SCAN_KEYWORD", "BREAK", "ADD_OP", 
                      "SUB_OP", "MUL_OP", "DIV_OP", "UNARY_ADD", "UNARY_MINUS", 
                      "VARIABLE", "NUMBER", "WHITESPACE", "NEWLINE", "TEXT" ]

    RULE_program = 0
    RULE_line = 1
    RULE_statement = 2
    RULE_scan_statement = 3
    RULE_condition = 4
    RULE_conditional_statement = 5
    RULE_ternary_statement = 6
    RULE_value = 7
    RULE_assignment = 8
    RULE_function = 9
    RULE_function_call = 10
    RULE_function_return = 11
    RULE_op = 12
    RULE_unary_arithmetic = 13
    RULE_arithmetic = 14
    RULE_relop = 15
    RULE_expression = 16
    RULE_array_item = 17
    RULE_array_length = 18
    RULE_array = 19
    RULE_array_ops = 20
    RULE_array_concat = 21
    RULE_print = 22
    RULE_while_loop = 23
    RULE_for_loop = 24

    ruleNames =  [ "program", "line", "statement", "scan_statement", "condition", 
                   "conditional_statement", "ternary_statement", "value", 
                   "assignment", "function", "function_call", "function_return", 
                   "op", "unary_arithmetic", "arithmetic", "relop", "expression", 
                   "array_item", "array_length", "array", "array_ops", "array_concat", 
                   "print", "while_loop", "for_loop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    BOOLEAN_ASSIGNMENT=17
    INT_ASSIGNMENT=18
    STRING_ASSIGNMENT=19
    INT=20
    STRING=21
    BOOLEAN=22
    TRUE=23
    FALSE=24
    FUNCTION=25
    RETURN=26
    WHILE=27
    FOR=28
    VAR=29
    CONST=30
    LET=31
    IF=32
    ELSE=33
    LT=34
    LTE=35
    GT=36
    GTE=37
    EQ=38
    NEQ=39
    PRINT=40
    SCAN_KEYWORD=41
    BREAK=42
    ADD_OP=43
    SUB_OP=44
    MUL_OP=45
    DIV_OP=46
    UNARY_ADD=47
    UNARY_MINUS=48
    VARIABLE=49
    NUMBER=50
    WHITESPACE=51
    NEWLINE=52
    TEXT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MerLangParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.LineContext)
            else:
                return self.getTypedRuleContext(MerLangParser.LineContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.FunctionContext)
            else:
                return self.getTypedRuleContext(MerLangParser.FunctionContext,i)


        def scan_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.Scan_statementContext)
            else:
                return self.getTypedRuleContext(MerLangParser.Scan_statementContext,i)


        def getRuleIndex(self):
            return MerLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MerLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 50
                    self.line()
                    pass

                elif la_ == 2:
                    self.state = 51
                    self.function()
                    pass

                elif la_ == 3:
                    self.state = 52
                    self.scan_statement()
                    pass


                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 10697153432257024) != 0)):
                    break

            self.state = 57
            self.match(MerLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ternary_statement(self):
            return self.getTypedRuleContext(MerLangParser.Ternary_statementContext,0)


        def statement(self):
            return self.getTypedRuleContext(MerLangParser.StatementContext,0)


        def conditional_statement(self):
            return self.getTypedRuleContext(MerLangParser.Conditional_statementContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MerLangParser.NEWLINE)
            else:
                return self.getToken(MerLangParser.NEWLINE, i)

        def getRuleIndex(self):
            return MerLangParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = MerLangParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 59
                self.ternary_statement()
                pass

            elif la_ == 2:
                self.state = 60
                self.statement()
                pass

            elif la_ == 3:
                self.state = 61
                self.conditional_statement()
                pass


            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 64
                self.match(MerLangParser.T__0)


            self.state = 68 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self.match(MerLangParser.NEWLINE)
                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==52):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(MerLangParser.AssignmentContext,0)


        def array_ops(self):
            return self.getTypedRuleContext(MerLangParser.Array_opsContext,0)


        def array_concat(self):
            return self.getTypedRuleContext(MerLangParser.Array_concatContext,0)


        def function_return(self):
            return self.getTypedRuleContext(MerLangParser.Function_returnContext,0)


        def function_call(self):
            return self.getTypedRuleContext(MerLangParser.Function_callContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(MerLangParser.ArithmeticContext,0)


        def print_(self):
            return self.getTypedRuleContext(MerLangParser.PrintContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(MerLangParser.While_loopContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(MerLangParser.For_loopContext,0)


        def getRuleIndex(self):
            return MerLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MerLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 72
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 73
                self.array_ops()
                pass

            elif la_ == 3:
                self.state = 74
                self.array_concat()
                pass

            elif la_ == 4:
                self.state = 75
                self.function_return()
                pass

            elif la_ == 5:
                self.state = 76
                self.function_call()
                pass

            elif la_ == 6:
                self.state = 77
                self.arithmetic()
                pass

            elif la_ == 7:
                self.state = 78
                self.print_()
                pass

            elif la_ == 8:
                self.state = 79
                self.while_loop()
                pass

            elif la_ == 9:
                self.state = 80
                self.for_loop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scan_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MerLangParser.VARIABLE, 0)

        def SCAN_KEYWORD(self):
            return self.getToken(MerLangParser.SCAN_KEYWORD, 0)

        def getRuleIndex(self):
            return MerLangParser.RULE_scan_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScan_statement" ):
                listener.enterScan_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScan_statement" ):
                listener.exitScan_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScan_statement" ):
                return visitor.visitScan_statement(self)
            else:
                return visitor.visitChildren(self)




    def scan_statement(self):

        localctx = MerLangParser.Scan_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_scan_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(MerLangParser.VARIABLE)
            self.state = 84
            self.match(MerLangParser.T__1)
            self.state = 85
            self.match(MerLangParser.SCAN_KEYWORD)
            self.state = 86
            self.match(MerLangParser.T__2)
            self.state = 87
            self.match(MerLangParser.T__3)
            self.state = 88
            self.match(MerLangParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MerLangParser.ExpressionContext,i)


        def relop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.RelopContext)
            else:
                return self.getTypedRuleContext(MerLangParser.RelopContext,i)


        def getRuleIndex(self):
            return MerLangParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = MerLangParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.expression()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1082331758592) != 0):
                self.state = 91
                self.relop()
                self.state = 92
                self.expression()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Conditional_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MerLangParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(MerLangParser.ConditionContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MerLangParser.NEWLINE)
            else:
                return self.getToken(MerLangParser.NEWLINE, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.LineContext)
            else:
                return self.getTypedRuleContext(MerLangParser.LineContext,i)


        def getRuleIndex(self):
            return MerLangParser.RULE_conditional_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional_statement" ):
                listener.enterConditional_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional_statement" ):
                listener.exitConditional_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional_statement" ):
                return visitor.visitConditional_statement(self)
            else:
                return visitor.visitChildren(self)




    def conditional_statement(self):

        localctx = MerLangParser.Conditional_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_conditional_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MerLangParser.IF)
            self.state = 100
            self.match(MerLangParser.T__2)
            self.state = 101
            self.condition()
            self.state = 102
            self.match(MerLangParser.T__3)
            self.state = 103
            self.match(MerLangParser.T__4)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 104
                self.match(MerLangParser.NEWLINE)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.line()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 10697153398702592) != 0)):
                    break

            self.state = 115
            self.match(MerLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ternary_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MerLangParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MerLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MerLangParser.RULE_ternary_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTernary_statement" ):
                listener.enterTernary_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTernary_statement" ):
                listener.exitTernary_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTernary_statement" ):
                return visitor.visitTernary_statement(self)
            else:
                return visitor.visitChildren(self)




    def ternary_statement(self):

        localctx = MerLangParser.Ternary_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ternary_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.expression()
            self.state = 118
            self.match(MerLangParser.T__6)
            self.state = 119
            self.statement()
            self.state = 120
            self.match(MerLangParser.T__7)
            self.state = 121
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MerLangParser.VARIABLE, 0)

        def NUMBER(self):
            return self.getToken(MerLangParser.NUMBER, 0)

        def TEXT(self):
            return self.getToken(MerLangParser.TEXT, 0)

        def function_call(self):
            return self.getTypedRuleContext(MerLangParser.Function_callContext,0)


        def array_item(self):
            return self.getTypedRuleContext(MerLangParser.Array_itemContext,0)


        def array_length(self):
            return self.getTypedRuleContext(MerLangParser.Array_lengthContext,0)


        def array(self):
            return self.getTypedRuleContext(MerLangParser.ArrayContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MerLangParser.AssignmentContext,0)


        def getRuleIndex(self):
            return MerLangParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = MerLangParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 123
                self.match(MerLangParser.VARIABLE)
                pass

            elif la_ == 2:
                self.state = 124
                self.match(MerLangParser.NUMBER)
                pass

            elif la_ == 3:
                self.state = 125
                self.match(MerLangParser.TEXT)
                pass

            elif la_ == 4:
                self.state = 126
                self.function_call()
                pass

            elif la_ == 5:
                self.state = 127
                self.array_item()
                pass

            elif la_ == 6:
                self.state = 128
                self.array_length()
                pass

            elif la_ == 7:
                self.state = 129
                self.array()
                pass

            elif la_ == 8:
                self.state = 130
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MerLangParser.VARIABLE, 0)

        def value(self):
            return self.getTypedRuleContext(MerLangParser.ValueContext,0)


        def INT(self):
            return self.getToken(MerLangParser.INT, 0)

        def STRING(self):
            return self.getToken(MerLangParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MerLangParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MerLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MerLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 134
            self.match(MerLangParser.VARIABLE)
            self.state = 135
            self.match(MerLangParser.T__1)
            self.state = 136
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MerLangParser.FUNCTION, 0)

        def VARIABLE(self):
            return self.getToken(MerLangParser.VARIABLE, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.ValueContext)
            else:
                return self.getTypedRuleContext(MerLangParser.ValueContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MerLangParser.NEWLINE)
            else:
                return self.getToken(MerLangParser.NEWLINE, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.LineContext)
            else:
                return self.getTypedRuleContext(MerLangParser.LineContext,i)


        def getRuleIndex(self):
            return MerLangParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = MerLangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MerLangParser.FUNCTION)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==49:
                self.state = 139
                self.match(MerLangParser.VARIABLE)


            self.state = 142
            self.match(MerLangParser.T__2)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 10696049122345472) != 0):
                self.state = 143
                self.value()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(MerLangParser.T__3)
            self.state = 150
            self.match(MerLangParser.T__4)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 151
                self.match(MerLangParser.NEWLINE)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                self.line()
                self.state = 160 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 10697153398702592) != 0)):
                    break

            self.state = 162
            self.match(MerLangParser.T__5)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 163
                self.match(MerLangParser.T__0)


            self.state = 167 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 166
                self.match(MerLangParser.NEWLINE)
                self.state = 169 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==52):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MerLangParser.VARIABLE, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MerLangParser.ValueContext)
            else:
                return self.getTypedRuleContext(MerLangParser.ValueContext,i)


        def getRuleIndex(self):
            return MerLangParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = MerLangParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MerLangParser.VARIABLE)
            self.state = 172
            self.match(MerLangParser.T__2)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 10696049122345472) != 0):
                self.state = 173
                self.value()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)
